Update Font & TailwindCSS Config

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,10 @@
   }
 }
 
+html {
+  font-family: var(--font-inter);
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
